# config/routes.rb
@@ -1,18 +1,19 @@
 Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
-  # Define your application routes per the DSL in https://guides.rubyonrails.org/routing.html
 
-  # Defines the root path route ("/")
-  # root "articles#index"
+  root to: 'login#new'
+  get '/login', to: 'login#new', as: :login
+  post '/login_web',to: 'login#login_web'
 
 
-  get 'books/search', to: 'books#search'
-  resources :users
-  post '/auth/login', to: 'authentication#login'
-  post 'auth/signup', to: 'authentication#signup'
-  resources :books
-  resources :authors
 
+  namespace :api do
+    post '/auth/login', to: 'authentication#login_new'
+    post 'auth/signup', to: 'authentication#signup'
+    resources :authors
+    resources :books
+    resources :users
+  end
 
 end
